--- a/index.html
+++ b/index.html
@@ -113,74 +113,114 @@
     <button class="theme-toggle" onclick="toggleTheme()">🌙 Dark</button>
     <h1>Research & References</h1>
     <p>Project: EduScheduler | SIH Problem ID: 25028</p>
-    <!-- Replace 'team-logo.png' with your logo -->
+    <!-- Replace 'team-logo.png' with your team logo -->
     <img src="team-logo.png" alt="Team Logo" class="team-logo">
   </header>
 
   <div class="container">
-    <h2>1. The Educational Timetabling Problem (ETP)</h2>
+    <h2>1. Frontend Development</h2>
     <ul>
       <li>
-        <strong>Title:</strong> University Course Timetabling Problem<br>
-        <strong>Author/Source:</strong> ACM Digital Library<br>
-        <strong>Year:</strong> 2022<br>
-        <strong>URL:</strong> <a href="#">https://dl.acm.org/etp2022</a><br>
-        <em>Annotation:</em> Defines course timetabling as an NP-hard problem, establishing the academic foundation for EduScheduler.
+        <strong>Title:</strong> React Official Documentation<br>
+        <strong>Source:</strong> Meta<br>
+        <strong>Year:</strong> 2024<br>
+        <strong>URL:</strong> <a href="https://react.dev/" target="_blank">https://react.dev/</a><br>
+        <em>Annotation:</em> React was chosen for its component-based architecture and efficient rendering, forming the backbone of EduScheduler’s frontend.
+      </li>
+      <li>
+        <strong>Title:</strong> Vite Official Documentation<br>
+        <strong>Source:</strong> Vite Team<br>
+        <strong>Year:</strong> 2024<br>
+        <strong>URL:</strong> <a href="https://vitejs.dev/" target="_blank">https://vitejs.dev/</a><br>
+        <em>Annotation:</em> Vite provides a fast build system and hot module replacement, streamlining development and boosting productivity.
+      </li>
+      <li>
+        <strong>Title:</strong> Tailwind CSS Documentation<br>
+        <strong>Source:</strong> Tailwind Labs<br>
+        <strong>Year:</strong> 2024<br>
+        <strong>URL:</strong> <a href="https://tailwindcss.com/docs" target="_blank">https://tailwindcss.com/docs</a><br>
+        <em>Annotation:</em> Tailwind CSS enables rapid UI development with a utility-first approach, ensuring design consistency across EduScheduler.
       </li>
     </ul>
 
-    <h2>2. AI and Machine Learning in Automated Scheduling</h2>
+    <h2>2. Backend Development</h2>
     <ul>
       <li>
-        <strong>Title:</strong> AI Approaches to Scheduling<br>
-        <strong>Author/Source:</strong> IEEE Xplore<br>
-        <strong>Year:</strong> 2023<br>
-        <strong>URL:</strong> <a href="#">https://ieeexplore.ieee.org/ai-scheduling</a><br>
-        <em>Annotation:</em> Demonstrates the application of machine learning and LLMs in optimizing resource allocation, supporting EduScheduler's AI-driven approach.
+        <strong>Title:</strong> Express.js Official Documentation<br>
+        <strong>Source:</strong> Express.js Foundation<br>
+        <strong>Year:</strong> 2024<br>
+        <strong>URL:</strong> <a href="https://expressjs.com/" target="_blank">https://expressjs.com/</a><br>
+        <em>Annotation:</em> Express.js provides a lightweight yet powerful framework for building EduScheduler’s RESTful backend APIs.
+      </li>
+      <li>
+        <strong>Title:</strong> Node.js Official Documentation<br>
+        <strong>Source:</strong> Node.js Foundation<br>
+        <strong>Year:</strong> 2024<br>
+        <strong>URL:</strong> <a href="https://nodejs.org/en/docs" target="_blank">https://nodejs.org/en/docs</a><br>
+        <em>Annotation:</em> Node.js runtime supports EduScheduler’s scalable, event-driven backend infrastructure.
+      </li>
+      <li>
+        <strong>Title:</strong> OpenAI API Documentation<br>
+        <strong>Source:</strong> OpenAI<br>
+        <strong>Year:</strong> 2025<br>
+        <strong>URL:</strong> <a href="https://platform.openai.com/docs/" target="_blank">https://platform.openai.com/docs/</a><br>
+        <em>Annotation:</em> Demonstrates how EduScheduler integrates generative AI for intelligent schedule optimization and natural language-based modifications.
       </li>
     </ul>
 
-    <h2>3. Natural Language Processing (NLP) for System Interaction</h2>
+    <h2>3. Database & Authentication</h2>
     <ul>
       <li>
-        <strong>Title:</strong> Conversational Interfaces for Enterprise Systems<br>
-        <strong>Author/Source:</strong> Springer<br>
-        <strong>Year:</strong> 2021<br>
-        <strong>URL:</strong> <a href="#">https://springer.com/conversational-interfaces</a><br>
-        <em>Annotation:</em> Validates using natural language for interacting with complex systems, justifying EduScheduler's text-to-command feature.
+        <strong>Title:</strong> Firestore Documentation<br>
+        <strong>Source:</strong> Google Firebase<br>
+        <strong>Year:</strong> 2024<br>
+        <strong>URL:</strong> <a href="https://firebase.google.com/docs/firestore" target="_blank">https://firebase.google.com/docs/firestore</a><br>
+        <em>Annotation:</em> Firestore’s NoSQL, document-based design supports EduScheduler’s evolving schema and real-time synchronization.
+      </li>
+      <li>
+        <strong>Title:</strong> Firebase Authentication Documentation<br>
+        <strong>Source:</strong> Google Firebase<br>
+        <strong>Year:</strong> 2024<br>
+        <strong>URL:</strong> <a href="https://firebase.google.com/docs/auth" target="_blank">https://firebase.google.com/docs/auth</a><br>
+        <em>Annotation:</em> Firebase Authentication manages secure login and identity verification for admins, faculty, and students.
       </li>
     </ul>
 
-    <h2>4. Languages, Frameworks, and Architecture</h2>
-    <ul>
-      <li><strong>Title:</strong> JavaScript Tutorial | <strong>Source:</strong> w3schools | <strong>Year:</strong> 2024 | 
-        <a href="https://www.w3schools.com/js/">https://www.w3schools.com/js/</a><br>
-        <em>Annotation:</em> Core resource for JavaScript, crucial for backend and frontend logic.
-      </li>
-      <li><strong>Title:</strong> React Official Docs | <strong>Source:</strong> Meta | <strong>Year:</strong> 2024 |
-        <a href="https://react.dev/">https://react.dev/</a><br>
-        <em>Annotation:</em> Documentation that supports building dynamic SPAs for EduScheduler’s frontend.
-      </li>
-    </ul>
-
-    <h2>5. Multi-Tenant SaaS Design Patterns</h2>
+    <h2>4. Foundational Knowledge</h2>
     <ul>
       <li>
-        <strong>Title:</strong> Multi-Tenant Data Isolation Strategies<br>
-        <strong>Author/Source:</strong> Microsoft Azure Architecture Center<br>
-        <strong>Year:</strong> 2023<br>
-        <strong>URL:</strong> <a href="#">https://learn.microsoft.com/saas-multitenant</a><br>
-        <em>Annotation:</em> Validates EduScheduler’s design for securely handling multiple institutions in a shared SaaS architecture.
+        <strong>Title:</strong> JavaScript Tutorial<br>
+        <strong>Source:</strong> W3Schools<br>
+        <strong>Year:</strong> 2024<br>
+        <strong>URL:</strong> <a href="https://www.w3schools.com/js/" target="_blank">https://www.w3schools.com/js/</a><br>
+        <em>Annotation:</em> Provided the core understanding of JavaScript, the foundation for both EduScheduler’s frontend and backend logic.
+      </li>
+      <li>
+        <strong>Title:</strong> HTML Tutorial<br>
+        <strong>Source:</strong> W3Schools<br>
+        <strong>Year:</strong> 2024<br>
+        <strong>URL:</strong> <a href="https://www.w3schools.com/html/" target="_blank">https://www.w3schools.com/html/</a><br>
+        <em>Annotation:</em> Ensured adherence to HTML5 standards for structuring EduScheduler’s web interface.
+      </li>
+      <li>
+        <strong>Title:</strong> CSS Tutorial<br>
+        <strong>Source:</strong> W3Schools<br>
+        <strong>Year:</strong> 2024<br>
+        <strong>URL:</strong> <a href="https://www.w3schools.com/css/" target="_blank">https://www.w3schools.com/css/</a><br>
+        <em>Annotation:</em> Supported styling fundamentals, complementing Tailwind CSS for EduScheduler’s UI design.
       </li>
     </ul>
 
     <div class="tech-logos">
-      <!-- Tech stack logos with links -->
-      <a href="https://www.typescriptlang.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" alt="TypeScript"></a>
+      <!-- Tech stack logos with official docs -->
+      <a href="https://www.typescriptlang.org/docs/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" alt="TypeScript"></a>
       <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript"></a>
       <a href="https://react.dev/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React"></a>
-      <a href="https://nodejs.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js"></a>
-      <a href="https://firebase.google.com/docs/firestore" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg" alt="Firestore"></a>
+      <a href="https://vitejs.dev/" target="_blank"><img src="https://vitejs.dev/logo.svg" alt="Vite" style="width:55px;"></a>
+      <a href="https://tailwindcss.com/docs" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-plain.svg" alt="Tailwind"></a>
+      <a href="https://nodejs.org/en/docs" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js"></a>
+      <a href="https://expressjs.com/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" alt="Express.js" style="filter:invert(1);"></a>
+      <a href="https://firebase.google.com/docs/firestore" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg" alt="Firebase"></a>
       <a href="https://platform.openai.com/docs/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/OpenAI_logo.svg" alt="OpenAI" style="width:60px;"></a>
     </div>
   </div>
@@ -193,11 +233,7 @@
     function toggleTheme() {
       document.body.classList.toggle("dark");
       const btn = document.querySelector(".theme-toggle");
-      if (document.body.classList.contains("dark")) {
-        btn.textContent = "☀️ Light";
-      } else {
-        btn.textContent = "🌙 Dark";
-      }
+      btn.textContent = document.body.classList.contains("dark") ? "☀️ Light" : "🌙 Dark";
     }
   </script>
 </body>
