--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <h1>Research & References</h1>
     <p>Project: EduScheduler | SIH Problem ID: 25028</p>
     <!-- Replace 'team-logo.png' with your actual team logo -->
-    <img src="team-logo.png" alt="Team Logo" class="team-logo">
+    <img src="1758811185901.jpg" alt="Team Logo" class="team-logo">
   </header>
 
   <div class="container">
