--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     }
     header .team-logo {
       position: absolute;
-      top: 15px;
-      right: 15px;
-      width: 120px;
-      height: 60px;
-      border-radius: 50%;
+      top: 25px;
+      right: 25px;
+      width: 240px;
+      height: 1200px;
+      border-radius: 0%;
       object-fit: cover;
-      border: 2px solid white;
+      border: .5px solid white;
     }
     .theme-toggle {
       position: absolute;
