--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <strong>Title:</strong> Firestore Documentation<br>
         <strong>Source:</strong> Google Firebase<br>
         <strong>Year:</strong> 2024<br>
-        <strong>URL:</strong> <a href="https://firebase.google.com/docs/firestore" target="_blank">https://firebase.google.com/docs/firestore</a><br>
+        <strong>URL:</strong> <a href="https://github.com/rajpratham1/EduScheduler/blob/main/firebassdocumentation.md" target="_blank">https://firebase.google.com/docs/firestore</a><br>
         <em>Annotation:</em> Firestore’s NoSQL, document-based design supports EduScheduler’s evolving schema and real-time synchronization.
       </li>
       <li>
