--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <strong>Title:</strong> Firebase Authentication Documentation<br>
         <strong>Source:</strong> Google Firebase<br>
         <strong>Year:</strong> 2024<br>
-        <strong>URL:</strong> <a href="https://firebase.google.com/docs/auth" target="_blank">https://firebase.google.com/docs/auth</a><br>
+        <strong>URL:</strong> <a href="https://github.com/rajpratham1/EduScheduler/blob/main/Firebase%20Authentication%20Documentation" target="_blank">https://firebase.google.com/docs/auth</a><br>
         <em>Annotation:</em> Firebase Authentication manages secure login and identity verification for admins, faculty, and students.
       </li>
     </ul>
